examples/test/testpolicy2711.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2711
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key26: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value32
          key21: value18
      podSelector:
        matchLabels:
          key7: value34
          key30: value12
          key29: value33
